--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
+    "sass": "^1.71.0",
+    "sass-loader": "^14.1.0",
     "vue": "^3.2.13",
     "vue-router": "^4.2.5",
     "wavesurfer.js": "^7.7.3"
